# chakna

./: .gitignore  README.md  cam.py  faces.py  pyproject.toml  sample_application.py
actuators/audio/: client.py  config.py  speaker_service.py
applications/: audio_recorder.py  black_and_white_vision.py  media_player.py  sample_application_audio.py  sample_application_vision.py  transcriber.py
middlewares/: face_recognition.py  speech_transcription.py
middlewares/face_recognition/: indexer.py  middleware.py  registry.py  search.py
sensors/audio/: audio_service.py  client.py  config.py
sensors/vision/: camera_service.py  camera_service_csi.py  camera_service_simple.py  camera_service_usb.py  client.py  config.py
status/: index.html  server.py  style.css
systemd_files/: chakna-audio-sensor.service  chakna-audio-speaker.service  chakna-camera.service  chakna-status-monitor.service
utils/: list_audio_devices.py
