[project]
name = "chakna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
