[project]
name = "chakna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
    "setuptools>=79.0.1",
    "supabase>=2.15.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
